# torch2onnx_deepdive

./: .gitignore  Makefile  README.md  pyproject.toml
src/torch2onnx_deepdive/: __init__.py
src/torch2onnx_deepdive/trace/: collect_tensor_attr_example.py
